Purple Gold Dachshund
Various code cleanup and implemented linking.